--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -4,13 +4,13 @@
     </div>
     <div class='panel-body'>
         <div class='row'>
-            <div class='col-lg-3'>
+            <div class='form-control'>
                 <span>Address:</span><input type='text' />
             </div>
-            <div class='col-lg-3'>
+            <div class='form-control'>
                 <span>Price:</span><input type='text' />
             </div>
-            <div class='col-lg-3'>
+            <div class='form-control'>
                 <span>Sq Ft:</span><input type='text' />
             </div>
             <div class='col-lg-3'>
@@ -33,8 +33,8 @@
         </div>
         <div class='row'>
             <div class="col-lg-1">
-                <span>Search</span><button id="searchBtn" ng-click="search"></button>
-                <span>Reset</span><button id="resetBtn" ng-click="reset"></button>
+                <button id="searchBtn" ng-click="search"><span class="glyphicon glyphicon-search"></span>Search</button>
+                <button id="resetBtn" ng-click="reset"><span>Reset</span></button>
             </div>                
         </div>
     </div>
